test_output.log

> Configure project :app
WARNING: API 'splits.density' is obsolete.
It will be removed in version 10.0 of the Android Gradle plugin.
Density-based apk split feature is deprecated and will be removed in AGP 10.0. Use Android App Bundle (https://developer.android.com/guide/app-bundle) to generate optimized APKs.
For more information, see https://developer.android.com/studio/build/configure-apk-splits#configure-density-split.

To determine what is calling splits.density, use -Pandroid.debug.obsoleteApi=true on the command line to display more information.

> Task :app:preBuild UP-TO-DATE
> Task :app:preDebugBuild UP-TO-DATE
> Task :app:checkKotlinGradlePluginConfigurationErrors SKIPPED
> Task :app:generateDebugBuildConfig UP-TO-DATE
> Task :app:checkDebugAarMetadata UP-TO-DATE
> Task :app:processDebugNavigationResources UP-TO-DATE
> Task :app:compileDebugNavigationResources UP-TO-DATE
> Task :app:generateDebugResValues UP-TO-DATE
> Task :app:processDebugGoogleServices UP-TO-DATE
> Task :app:mapDebugSourceSetPaths UP-TO-DATE
> Task :app:generateDebugResources UP-TO-DATE
> Task :app:mergeDebugResources UP-TO-DATE
> Task :app:packageDebugResources UP-TO-DATE
> Task :app:parseDebugLocalResources UP-TO-DATE
> Task :app:createDebugCompatibleScreenManifests UP-TO-DATE
> Task :app:extractDeepLinksDebug UP-TO-DATE
> Task :app:processDebugMainManifest UP-TO-DATE
> Task :app:processDebugManifest UP-TO-DATE
> Task :app:processDebugManifestForPackage UP-TO-DATE
> Task :app:processDebugResources UP-TO-DATE
> Task :app:kaptGenerateStubsDebugKotlin UP-TO-DATE
> Task :app:kaptDebugKotlin UP-TO-DATE
> Task :app:compileDebugKotlin UP-TO-DATE
> Task :app:javaPreCompileDebug UP-TO-DATE
> Task :app:compileDebugJavaWithJavac UP-TO-DATE
> Task :app:hiltAggregateDepsDebug UP-TO-DATE
> Task :app:hiltJavaCompileDebug UP-TO-DATE
> Task :app:transformDebugClassesWithAsm UP-TO-DATE
> Task :app:bundleDebugClassesToRuntimeJar UP-TO-DATE
> Task :app:preDebugUnitTestBuild UP-TO-DATE
> Task :app:processDebugJavaRes UP-TO-DATE
> Task :app:bundleDebugClassesToCompileJar UP-TO-DATE
> Task :app:kaptGenerateStubsDebugUnitTestKotlin UP-TO-DATE
> Task :app:javaPreCompileDebugUnitTest UP-TO-DATE

> Task :app:kaptDebugUnitTestKotlin FAILED
./gradlew : C:\Users\ACER NITRO V15\Project\Bootcamp\lofi\app\build\tmp\kapt3\stubs\debugUnitTest\com\loanfinancial\lofi\ui\features\loan\ApplyLoanViewModelTest.java:37: error: incompatible types: 
NonExistentClass cannot be converted to Annotation
At line:1 char:1
+ ./gradlew testDebugUnitTest 2>&1 | Out-File -Encoding ascii test_outp ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo              : NotSpecified: (C:\Us    ers\ACER N...d to Annot    ation:String) [], Remot    eException
    + FullyQualifiedErrorId     : NativeCommandError
 
    @error.NonExistentClass()
          ^
C:\Users\ACER NITRO V15\Project\Bootcamp\lofi\app\build\tmp\kapt3\stubs\debugUnitTest\com\loanfinancial\lofi\ui\features\loan\ApplyLoanViewModelTest.java:42: error: incompatible types: 
NonExistentClass cannot be converted to Annotation
    @error.NonExistentClass()
          ^
C:\Users\ACER NITRO V15\Project\Bootcamp\lofi\app\build\tmp\kapt3\stubs\debugUnitTest\com\loanfinancial\lofi\ui\features\loan\ApplyLoanViewModelTest.java:47: error: incompatible types: 
NonExistentClass cannot be converted to Annotation
    @error.NonExistentClass()
          ^
C:\Users\ACER NITRO V15\Project\Bootcamp\lofi\app\build\tmp\kapt3\stubs\debugUnitTest\com\loanfinancial\lofi\ui\features\loan\ApplyLoanViewModelTest.java:52: error: incompatible types: 
NonExistentClass cannot be converted to Annotation
    @error.NonExistentClass()
          ^
C:\Users\ACER NITRO V15\Project\Bootcamp\lofi\app\build\tmp\kapt3\stubs\debugUnitTest\com\loanfinancial\lofi\ui\features\loan\ApplyLoanViewModelTest.java:57: error: incompatible types: 
NonExistentClass cannot be converted to Annotation
    @error.NonExistentClass()
          ^
C:\Users\ACER NITRO V15\Project\Bootcamp\lofi\app\build\tmp\kapt3\stubs\debugUnitTest\com\loanfinancial\lofi\ui\features\loan\ApplyLoanViewModelTest.java:62: error: incompatible types: 
NonExistentClass cannot be converted to Annotation
    @error.NonExistentClass()
          ^
C:\Users\ACER NITRO V15\Project\Bootcamp\lofi\app\build\tmp\kapt3\stubs\debugUnitTest\com\loanfinancial\lofi\ui\features\loan\ApplyLoanViewModelTest.java:67: error: incompatible types: 
NonExistentClass cannot be converted to Annotation
    @error.NonExistentClass()
          ^
C:\Users\ACER NITRO V15\Project\Bootcamp\lofi\app\build\tmp\kapt3\stubs\debugUnitTest\com\loanfinancial\lofi\ui\features\loan\ApplyLoanViewModelTest.java:72: error: incompatible types: 
NonExistentClass cannot be converted to Annotation
    @error.NonExistentClass()
          ^
C:\Users\ACER NITRO V15\Project\Bootcamp\lofi\app\build\tmp\kapt3\stubs\debugUnitTest\com\loanfinancial\lofi\ui\features\loan\ApplyLoanViewModelTest.java:77: error: incompatible types: 
NonExistentClass cannot be converted to Annotation
    @error.NonExistentClass()
          ^
C:\Users\ACER NITRO V15\Project\Bootcamp\lofi\app\build\tmp\kapt3\stubs\debugUnitTest\com\loanfinancial\lofi\ui\features\loan\ApplyLoanViewModelTest.java:82: error: incompatible types: 
NonExistentClass cannot be converted to Annotation
    @error.NonExistentClass()
          ^
C:\Users\ACER NITRO V15\Project\Bootcamp\lofi\app\build\tmp\kapt3\stubs\debugUnitTest\com\loanfinancial\lofi\ui\features\loan\ApplyLoanViewModelTest.java:87: error: incompatible types: 
NonExistentClass cannot be converted to Annotation
    @error.NonExistentClass()
          ^
C:\Users\ACER NITRO V15\Project\Bootcamp\lofi\app\build\tmp\kapt3\stubs\debugUnitTest\com\loanfinancial\lofi\ui\features\loan\ApplyLoanViewModelTest.java:92: error: incompatible types: 
NonExistentClass cannot be converted to Annotation
    @error.NonExistentClass()
          ^
C:\Users\ACER NITRO V15\Project\Bootcamp\lofi\app\build\tmp\kapt3\stubs\debugUnitTest\com\loanfinancial\lofi\ui\features\loan\ApplyLoanViewModelTest.java:97: error: incompatible types: 
NonExistentClass cannot be converted to Annotation
    @error.NonExistentClass()
          ^
C:\Users\ACER NITRO V15\Project\Bootcamp\lofi\app\build\tmp\kapt3\stubs\debugUnitTest\com\loanfinancial\lofi\ui\features\loan\ApplyLoanViewModelTest.java:102: error: incompatible types: 
NonExistentClass cannot be converted to Annotation
    @error.NonExistentClass()
          ^
C:\Users\ACER NITRO V15\Project\Bootcamp\lofi\app\build\tmp\kapt3\stubs\debugUnitTest\com\loanfinancial\lofi\ui\features\loan\ApplyLoanViewModelTest.java:107: error: incompatible types: 
NonExistentClass cannot be converted to Annotation
    @error.NonExistentClass()
          ^
C:\Users\ACER NITRO V15\Project\Bootcamp\lofi\app\build\tmp\kapt3\stubs\debugUnitTest\com\loanfinancial\lofi\ui\features\loan\DocumentUploadViewModelTest.java:25: error: incompatible types: 
NonExistentClass cannot be converted to Annotation
    @error.NonExistentClass()
          ^
C:\Users\ACER NITRO V15\Project\Bootcamp\lofi\app\build\tmp\kapt3\stubs\debugUnitTest\com\loanfinancial\lofi\ui\features\loan\DocumentUploadViewModelTest.java:30: error: incompatible types: 
NonExistentClass cannot be converted to Annotation
    @error.NonExistentClass()
          ^
C:\Users\ACER NITRO V15\Project\Bootcamp\lofi\app\build\tmp\kapt3\stubs\debugUnitTest\com\loanfinancial\lofi\ui\features\loan\DocumentUploadViewModelTest.java:35: error: incompatible types: 
NonExistentClass cannot be converted to Annotation
    @error.NonExistentClass()
          ^
C:\Users\ACER NITRO V15\Project\Bootcamp\lofi\app\build\tmp\kapt3\stubs\debugUnitTest\com\loanfinancial\lofi\ui\features\loan\LoanDetailViewModelTest.java:24: error: incompatible types: 
NonExistentClass cannot be converted to Annotation
    @error.NonExistentClass()
          ^
C:\Users\ACER NITRO V15\Project\Bootcamp\lofi\app\build\tmp\kapt3\stubs\debugUnitTest\com\loanfinancial\lofi\ui\features\loan\LoanDetailViewModelTest.java:29: error: incompatible types: 
NonExistentClass cannot be converted to Annotation
    @error.NonExistentClass()
          ^
C:\Users\ACER NITRO V15\Project\Bootcamp\lofi\app\build\tmp\kapt3\stubs\debugUnitTest\com\loanfinancial\lofi\ui\features\loan\LoanTnCViewModelTest.java:26: error: incompatible types: NonExistentClass 
cannot be converted to Annotation
    @error.NonExistentClass()
          ^
C:\Users\ACER NITRO V15\Project\Bootcamp\lofi\app\build\tmp\kapt3\stubs\debugUnitTest\com\loanfinancial\lofi\ui\features\loan\LoanTnCViewModelTest.java:31: error: incompatible types: NonExistentClass 
cannot be converted to Annotation
    @error.NonExistentClass()
          ^
C:\Users\ACER NITRO V15\Project\Bootcamp\lofi\app\build\tmp\kapt3\stubs\debugUnitTest\com\loanfinancial\lofi\ui\features\loan\LoanTnCViewModelTest.java:36: error: incompatible types: NonExistentClass 
cannot be converted to Annotation
    @error.NonExistentClass()
          ^
C:\Users\ACER NITRO V15\Project\Bootcamp\lofi\app\build\tmp\kapt3\stubs\debugUnitTest\com\loanfinancial\lofi\ui\features\loan\LoanTnCViewModelTest.java:41: error: incompatible types: NonExistentClass 
cannot be converted to Annotation
    @error.NonExistentClass()
          ^

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:kaptDebugUnitTestKotlin'.
> A failure occurred while executing org.jetbrains.kotlin.gradle.internal.KaptWithoutKotlincTask$KaptExecutionWorkAction

* Try:
> Run with --stacktrace option to get the stack trace.
> Run with --info or --debug option to get more log output.
> Run with --scan to get full insights.
> Get more help at https://help.gradle.org.

BUILD FAILED in 2s
31 actionable tasks: 1 executed, 30 up-to-date
